# sevirs

./: .flake8  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  nb.ipynb  notebook.ipynb  polars.ipynb  ps.ipynb  pyproject.toml  requirements.txt  setup.py  t.ipynb  t.py
.devcontainer/: devcontainer.json
docs/: README.md  t.excalidraw
notebooks/: 1-dataset.ipynb  1-sevir-dataset.ipynb  2-feature-enginering.ipynb  Copy of MNIST Experiments V2.ipynb  Copy of SEVIR_V3.ipynb  dockerfile.ipynb  nb-1.ipynb  nb-2.ipynb  nb.ipynb  polars.ipynb  ps.ipynb  tensorflow.ipynb
scripts/: get_probsevere.py
sevir/: __init__.py  _adapters.py  _typing.py  catalog.py  config.json  constants.py  dataset.py  h5.py
sevir/core/: catalog.py  datasets.py  h5.py
sevir/models/: nano_gpt.py  wx_gpt.py
sevir/mrms/: __init__.py
sevirs/: __init__.py  _lib.pyi  _typing.py  config.json  constants.py  enums.py  generic.py  train.py
sevirs/core/: catalog.py  datasets.py  h5.py  plot.py
sevirs/data/: generic.py  loader.py  sampler.py
sevirs/models/: masked_autoencoder.py  nano_gpt.py  transformer.py  wx_gpt.py
sevirs/mrms/: constants.py
src/: __init__.py  _typing.py  abc.py  base.py  catalog.py  constants.py  dataset.py  generic.py  h5.py  lib.py  lib.rs  pyproject.toml  store.py
src/models/: gpt.py
src/sevir/: __init__.py  _adapters.py  _typing.py  catalog.py  constants.py  dataset.py  datasets.py  display.py  generic.py  h5.py  train.py
src/sevir/core/: catalog.py  datasets.py  h5.py  plot.py
src/sevir/models/: wx_gpt.py
src/sevir/mrms/: __init__.py  constants.py  core.py  iastate.py
src/utils/: __init__.py
tests/: catalog_test.py  conftest.py  constants_test.py  h5_test.py  requirements-dev.txt  requirements.txt
tests/core/: catalog_test.py  h5_test.py
tests/data/: generic_test.py
trash/: 2.ipynb  main.c  main.cpp  nb.ipynb
